@@ -57,7 +57,6 @@ select {
 	min-height: 60px;
 }
 #page_header .welcome_msg {
-	float: left;
 }
 
 #page_header .welcome_msg_inner {
@@ -122,6 +121,8 @@ select {
 }
 
 #left_area_bottom {
+	position: relative;
+	width: 90%;
 	background: #F9FFC9;
 	margin: 1em;
 	padding: 1em;
@@ -144,7 +145,9 @@ select {
 }
 
 * html #main_area {/* Stupid IE hack */
-	width: 69%;
+	width: 63%;
+		margin: 0;
+	padding: 0;
 }
 #main_area_top {
 	background: #f5f5f5 url('images/back_header_fade.gif') repeat-x bottom left;
@@ -165,6 +168,8 @@ select {
 }
 
 #main_area_bottom {
+	position: relative;
+	width: 90%;
 	margin: 1em;
 	padding: 0;
 	float: left;
